--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to my page!
+description: I will treat this page as a sort of index on my pas experience as a developer. It contains links to my past work by technology so that you may use it to review code relevant to you, also, feel free to contact me at rodrigopinet@outlook.com
